# openai-telegram-bot

./: .env.example  .gitignore  Makefile  README.md  bot.py  chat.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  restart-serv.sh  service.conf  tracker.py
audiotools/: __init__.py  elevenlabs_synthesize.py  openai_speech.py  witai_speech.py  witai_synthesize.py
