[project]
name = "claudette-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiodns==3.2.0",
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.5",
    "aiosignal==1.3.1",
    "anyio==3.7.1",
    "asttokens==2.2.1",
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "backcall==0.2.0",
    "brotli==1.1.0",
    "certifi==2023.7.22",
    "cffi==1.17.1",
    "charset-normalizer==3.2.0",
    "chatgpt-md-converter==0.1.2",
    "cmake==3.27.0",
    "dataclasses-json==0.5.13",
    "decorator==5.1.1",
    "elevenlabs==0.2.21",
    "exceptiongroup==1.1.2",
    "executing==1.2.0",
    "ffmpeg-python==0.2.0",
    "filelock==3.12.2",
    "frozenlist==1.4.0",
    "future==0.18.3",
    "greenlet==2.0.2",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "idna==3.4",
    "ipython==8.14.0",
    "jedi==0.18.2",
    "jinja2==3.1.2",
    "langchain==0.0.239",
    "langsmith==0.0.14",
    "latex2mathml==3.77.0",
    "lit==16.0.6",
    "llvmlite==0.40.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.3",
    "marshmallow==3.20.1",
    "matplotlib-inline==0.1.6",
    "mdurl==0.1.2",
    "mistletoe==1.4.0",
    "more-itertools==9.1.0",
    "mpmath==1.3.0",
    "multidict==6.0.4",
    "mypy-extensions==1.0.0",
    "networkx==3.1",
    "numba==0.57.1",
    "numexpr==2.8.4",
    "numpy==1.24.4",
    "nvidia-cublas-cu11==11.10.3.66",
    "nvidia-cuda-cupti-cu11==11.7.101",
    "nvidia-cuda-nvrtc-cu11==11.7.99",
    "nvidia-cuda-runtime-cu11==11.7.99",
    "nvidia-cudnn-cu11==8.5.0.96",
    "nvidia-cufft-cu11==10.9.0.58",
    "nvidia-curand-cu11==10.2.10.91",
    "nvidia-cusolver-cu11==11.4.0.1",
    "nvidia-cusparse-cu11==11.7.4.91",
    "nvidia-nccl-cu11==2.14.3",
    "nvidia-nvtx-cu11==11.7.91",
    "openai==0.27.8",
    "openapi-schema-pydantic==1.2.4",
    "packaging==23.1",
    "parso==0.8.3",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "prompt-toolkit==3.0.39",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pycares==4.4.0",
    "pycparser==2.22",
    "pydantic==1.10.11",
    "pydub==0.25.1",
    "pygments==2.15.1",
    "pytelegrambotapi==4.22.1",
    "python-dotenv==1.0.0",
    "python-telegram-bot==21.5",
    "pyyaml==6.0.1",
    "redis==5.0.0",
    "regex==2023.6.3",
    "requests==2.31.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sqlalchemy==2.0.19",
    "stack-data==0.6.2",
    "svgwrite==1.4.3",
    "sympy==1.12",
    "tenacity==8.2.2",
    "tiktoken==0.3.1",
    "tomli==2.0.1",
    "torch==2.0.1",
    "tqdm==4.65.0",
    "traitlets==5.9.0",
    "triton==2.0.0",
    "typing-extensions==4.7.1",
    "typing-inspect==0.9.0",
    "urllib3==2.0.4",
    "wavedrom==2.0.3.post3",
    "wcwidth==0.2.6",
    "yarl==1.9.2",
]
